# responseiq

./: .dockerignore  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  <MagicMock name='stdout' id='124029506620256'>  <MagicMock name='stdout' id='126219292830000'>  <MagicMock name='stdout' id='126816483365456'>  <MagicMock name='stdout' id='128535991734000'>  BENCHMARKS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  ResponseIQ_Design_Document.md  SECURITY.md  action.yml  cliff.toml  demo.tape  demo_p2_proof_oriented.py  docker-compose.release.yml  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.txt  responseiq.db
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: responseiq_cto.md
.github/workflows/: ci.yml  deploy.yml  post_release_verify.yml  release.yml  release_candidate.yml  scorecard.yml  test.yml
.responseiq/: rules.yaml
docs/: AI_MANIFESTO.md  BENCHMARKS.md  BLUEPRINTS.md  CONTRIBUTING.md  PLUGINS.md  SECURITY.md
fixtures/: README.md  fixture_high.json  fixture_medium.json  fixture_none.json
reports/: swe_bench_eval.json  swe_bench_eval.md
rollbacks/: rollback_auto_014baa9c.py  rollback_auto_014baa9c_manifest.json  rollback_auto_02e0899e.py  rollback_auto_02e0899e_manifest.json  rollback_auto_048881df.py  rollback_auto_048881df_manifest.json  rollback_auto_0a334d1e.py  rollback_auto_0a334d1e_manifest.json  rollback_auto_0b099e8f.py  rollback_auto_0b099e8f_manifest.json  rollback_auto_0c9b759e.py  rollback_auto_0c9b759e_manifest.json  rollback_auto_10378ca8.py  rollback_auto_10378ca8_manifest.json  rollback_auto_13474dc9.py  rollback_auto_13474dc9_manifest.json  rollback_auto_143c9e44.py  rollback_auto_143c9e44_manifest.json  rollback_auto_16f77fbe.py  rollback_auto_16f77fbe_manifest.json  rollback_auto_177ec4cb.py  rollback_auto_177ec4cb_manifest.json  rollback_auto_183b65f9.py  rollback_auto_183b65f9_manifest.json  rollback_auto_1a9eb77d.py  rollback_auto_1a9eb77d_manifest.json  rollback_auto_1bb8969b.py  rollback_auto_1bb8969b_manifest.json  rollback_auto_1c91b18e.py  rollback_auto_1c91b18e_manifest.json  rollback_auto_1d9f1bde.py  rollback_auto_1d9f1bde_manifest.json  rollback_auto_238659ae.py  rollback_auto_238659ae_manifest.json  rollback_auto_24241bc7.py  rollback_auto_24241bc7_manifest.json  rollback_auto_244061dd.py  rollback_auto_244061dd_manifest.json  rollback_auto_292461b7.py  rollback_auto_292461b7_manifest.json  (+139 more)
samples/: .gitignore  README.md  buggy_service.py  demo.sh
scripts/: p21_sovereign_audit_demo.py  swe_bench_eval.py
src/: app.py  cli.py  db.py  models.py
src/ai/: llm_service.py
src/blueprints/: __init__.py  loader.py
src/config/: settings.py
src/integrations/: github_integration.py
src/parsers/: custom_parser.py
src/responseiq/: __init__.py  __version__.py  app.py  cli.py  db.py  mcp_server.py  plugin_registry.py  telemetry.py  worker.py
src/responseiq/ai/: dspy_optimizer.py  llm_service.py  local_llm_service.py  model_utils.py  schemas.py
src/responseiq/blueprints/: __init__.py  crashloop_increase_memory.yml  loader.py
src/responseiq/config/: base.py  guardrails.py  keywords.json  policy_config.py  settings.py
src/responseiq/integrations/: github_integration.py
src/responseiq/models/: __init__.py  agent_state.py  base.py
src/responseiq/parsers/: __init__.py  base.py  custom_parser.py  registry.py
src/responseiq/plugins/: base.py  django_parser.py  fastapi_parser.py  fix.py  go_parser.py  nodejs_parser.py  scan.py  spring_parser.py  watch.py
src/responseiq/prompts/: node_prompts.yaml
src/responseiq/routers/: audit.py  blueprints.py  causal_graph.py  conversations.py  feedback.py  github_pr.py  proof_record.py  shadow_report.py  streaming.py  watchdog.py  webhooks.py
src/responseiq/schemas/: __init__.py  blueprint.py  causal_graph.py  conversation.py  feedback.py  github_pr.py  incident.py  log.py  proof.py  recommendation.py  semantic.py  user.py  webhooks.py
src/responseiq/services/: __init__.py  analyzer.py  audit_service.py  causal_graph_service.py  conversation_service.py  critic_service.py  git_correlation_service.py  github_pr_service.py  graph_service.py  impact.py  incident_service.py  node_controllers.py  notification_service.py  performance_gate.py  pr_service.py  prompt_loader.py  remediation_service.py  (+8 more)
src/routers/: blueprints.py
src/schemas/: blueprint.py  incident.py  log.py
src/services/: analyzer.py  incident_service.py  pr_service.py  remediation_service.py
src/static/: blueprints.html
src/utils/: config_loader.py  context_extractor.py  git_utils.py  k8s_patcher.py  log_processor.py  logger.py  telemetry.py
tests/: conftest.py
tests/e2e/: test_p21_sovereign_audit.py  test_remediation_e2e.py
tests/fixtures/: test_fixtures_harness.py
tests/integration/: test_blueprints_api.py  test_blueprints_ui.py  test_integration_postgres.py
tests/repro/: __init__.py  base.py  test_inc_2026_001.py  test_inc_2026_002.py  test_inc_2026_003.py
tests/unit/: test_analyzer.py  test_analyzer_config.py  test_analyzer_keyword_mapping.py  test_async_ingestion.py  test_audit_service.py  test_blueprint_loader.py  test_causal_graph.py  test_cli.py  test_config_loader.py  test_context_extractor.py  test_conversations.py  test_critic_service.py  test_db.py  test_db_connection.py  test_dspy_optimizer.py  test_edge_cases.py  test_feedback.py  test_fix_plugin.py  test_git_correlation_service.py  test_github_pr.py  test_graph_service.py  test_guardrails.py  test_impact_model.py  test_incident_filtering.py  test_incident_impact_ordering.py  test_innovation.py  test_integrity_gate.py  test_llm_router.py  test_llm_service.py  test_llm_settings.py  test_log_duplicates.py  test_log_ingestion.py  test_log_scrubber.py  test_log_validation.py  test_logger.py  test_mcp_server.py  test_multi_repo_resolver.py  test_multiple_logs_incident_creation.py  test_ner_scrubber.py  test_node_controllers.py  (+20 more)
(+16 files in other folders)
