[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "responseiq"
version = "2.1.0"
description = "AI-Powered Infrastructure Copilot: The Self-Healing SRE."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Youth Innovations", email = "info.youthinno@gmail.com" }
]
keywords = [
    "sre",
    "kubernetes",
    "observability",
    "ai-ops",
    "devops",
    "platform-engineering",
    "responseiq",
    "self-healing",
    "infrastructure-as-code"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "slack-sdk>=3.20.0",
    "PyGithub>=1.59.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    # Jaeger exporter is deprecated, use OTLP
    "opentelemetry-instrumentation-logging>=0.45b0",
    "psycopg2-binary>=2.9.0",
    "sqlmodel>=0.0.8",
    "pydantic-settings>=2.0.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "ruamel.yaml>=0.17.0",
    "aiofiles>=23.0.0",
    "googleapis-common-protos>=1.63.0",
]

[project.urls]
Homepage = "https://github.com/infoyouth/responseiq"
Repository = "https://github.com/infoyouth/responseiq"
Documentation = "https://github.com/infoyouth/responseiq#readme"
"Bug Tracker" = "https://github.com/infoyouth/responseiq/issues"
Changelog = "https://github.com/infoyouth/responseiq/blob/main/CHANGELOG.md"

[project.scripts]
responseiq = "responseiq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/responseiq"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".devcontainer",
    "/config",
    "docs",
    "/fixtures",
    "helm",
    "scripts",
    "terraform",
    "/tests",
    ".dockerignore",
    ".flake8",
    ".pre-commit-config.yaml",
    "action.yml",
    "CHANGELOG.md",
    "docker-compose*.yml",
    "Dockerfile",
    "Makefile",
    "Procfile",
    "README_UV_Update.md",
    "ResponseIQ_Design_Document.md",
    "requirements-dev.txt",
    "uv.lock",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "mypy>=1.0.0",
    "types-requests>=2.0.0",
    "types-aiofiles>=23.0.0",
    "pbr>=5.0.0",
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
]

[tool.black]
line-length = 120
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/repro/test_incident_.*\.py
  | tests/repro/test_test_.*\.py
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["**/tests/repro/test_incident_*.py", "**/tests/repro/test_test_*.py"]

[tool.flake8]
max-line-length = 120
exclude = [
    ".git", "__pycache__", "docs/source", "build", "dist",
    "tests/repro/test_incident_*.py", "tests/repro/test_test_*.py"
]

[tool.ruff]
line-length = 120
exclude = [
    "tests/repro/test_incident_*.py",
    "tests/repro/test_test_*.py"
]

[tool.bandit]
exclude_dirs = ["tests", "fixtures"]

[tool.semantic_release]
version_variables = [
    "src/responseiq/__version__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
assets = []
build_command = "pip install uv && uv build"
commit_message = "chore(release): {version} [skip ci]"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.responseiq]
# Configure what ResponseIQ scans/ignores.
ignore_dirs = [
    ".git", ".venv", "venv", "env", "node_modules", "__pycache__",
    "dist", "build", "system", "site-packages",
    "tests", "test", "docs", "fixtures", "terraform", "helm"
]
ignore_extensions = [
    ".yml", ".yaml", ".json", ".md", ".toml", ".pyc", ".pyo", ".lock",
    ".whl", ".png", ".jpg", ".gif", ".css", ".map",
    ".py", ".js", ".ts", ".go", ".java", ".c", ".cpp"
]
