[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "responseiq"
version = "2.19.1"
description = "AI-Powered Infrastructure Copilot: The Self-Healing SRE."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Youth Innovations", email = "info.youthinno@gmail.com" }
]
keywords = [
    "sre",
    "kubernetes",
    "observability",
    "ai-ops",
    "devops",
    "platform-engineering",
    "responseiq",
    "self-healing",
    "infrastructure-as-code"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "openai>=1.66.0",
    "instructor>=1.7.0",
    "arq>=0.26.0",
    "langfuse>=2.0.0,<3.0",
    "slack-sdk>=3.20.0",
    "githubkit>=0.12.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation>=0.50b0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    # Jaeger exporter is deprecated, use OTLP
    "opentelemetry-instrumentation-logging>=0.50b0",
    "psycopg[binary]>=3.0",
    "sqlmodel>=0.0.37",
    "pydantic-settings>=2.0.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "ruamel.yaml>=0.17.0",
    "aiofiles>=23.0.0",
    "googleapis-common-protos>=1.63.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.0.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=6.0.2",
    "types-pyyaml>=6.0.12.20250915",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/infoyouth/responseiq"
Repository = "https://github.com/infoyouth/responseiq"
Documentation = "https://github.com/infoyouth/responseiq#readme"
"Bug Tracker" = "https://github.com/infoyouth/responseiq/issues"
Changelog = "https://github.com/infoyouth/responseiq/blob/main/CHANGELOG.md"

[project.scripts]
responseiq = "responseiq.cli:main"

[project.optional-dependencies]
temporal = ["temporalio>=1.0.0"]
pgvector = ["pgvector>=0.3.0"]
ner = ["spacy>=3.7.0"]
reports = ["fpdf2>=2.7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/responseiq"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".devcontainer",
    "/config",
    "docs",
    "/fixtures",
    "helm",
    "scripts",
    "terraform",
    "/tests",
    ".dockerignore",
    ".pre-commit-config.yaml",
    "action.yml",
    "CHANGELOG.md",
    "docker-compose*.yml",
    "Dockerfile",
    "Makefile",
    "Procfile",
    "README_UV_Update.md",
    "ResponseIQ_Design_Document.md",
    "requirements-dev.txt",
    "uv.lock",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
    "types-requests>=2.0.0",
    "types-aiofiles>=23.0.0",
    "hypothesis>=6.100.0",
    "pbr>=5.0.0",
    "pre-commit>=3.0.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
line-length = 120
exclude = [
    "tests/repro/test_incident_*.py",
    "tests/repro/test_test_*.py",
    "tests/repro/test_[0-9a-f]*_*.py",
]

[tool.semantic_release]
version_variables = [
    "src/responseiq/__version__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
assets = []
build_command = "pip install uv && uv build"
commit_message = "chore(release): {version} [skip ci]"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Run only the proper test suite; demo_utils_local requires optional dev deps
testpaths = ["tests"]
asyncio_mode = "strict"
norecursedirs = ["demo_utils_local", "rollbacks", "scripts", "docs", "fixtures", "terraform", "helm"]

[tool.responseiq]
# Configure what ResponseIQ scans/ignores.
ignore_dirs = [
    ".git", ".venv", "venv", "env", "node_modules", "__pycache__",
    "dist", "build", "system", "site-packages",
    "tests", "test", "docs", "fixtures", "terraform", "helm"
]
ignore_extensions = [
    ".yml", ".yaml", ".json", ".md", ".toml", ".pyc", ".pyo", ".lock",
    ".whl", ".png", ".jpg", ".gif", ".css", ".map",
    ".py", ".js", ".ts", ".go", ".java", ".c", ".cpp"
]
